force-app/main/default/objects/SOW_Item__c/SOW_Item__c.object-meta.xml
<CustomObject>
    <label>SOW Item</label>
    <nameField>
        <displayFormat>SOWI-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SOW Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>