force-app/main/default/objects/SOW_Item__c/fields/Next_Item__c.field-meta.xml
<CustomField>
    <fullName>Next_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Item</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Next item must belong to the same SOW</errorMessage>
        <filterItems>
            <field>SOW_Item__c.SOW__c</field>
            <operation>equals</operation>
            <valueField>$Source.SOW__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SOW_Item__c</referenceTo>
    <relationshipLabel>SOW Items (Next Item)</relationshipLabel>
    <relationshipName>SOW_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>