force-app/main/default/objects/SOW_Item__c/fields/Production_Schedule_Item__c.field-meta.xml
<CustomField>
    <fullName>Production_Schedule_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Production Schedule Item</label>
    <referenceTo>ozbee__Production_Schedule_Item__c</referenceTo>
    <relationshipLabel>SOW Items</relationshipLabel>
    <relationshipName>SOW_Items</relationshipName>
    <type>Lookup</type>
</CustomField>