force-app/main/default/objects/SOW_Item__c/fields/Schedule_Generated__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schedule Generated</label>
    <type>Checkbox</type>
</CustomField>