force-app/main/default/objects/SOW_Item__c/fields/SOW__c.field-meta.xml
<CustomField>
    <fullName>SOW__c</fullName>
    <label>SOW</label>
    <referenceTo>SOW__c</referenceTo>
    <relationshipLabel>SOW Items</relationshipLabel>
    <relationshipName>SOW_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>