force-app/main/default/objects/SOW_Item__c/fields/Task_Phase__c.field-meta.xml
<CustomField>
    <fullName>Task_Phase__c</fullName>
    <label>Task / Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Ply</fullName>
            </value>
            <value>
                <fullName>Labor</fullName>
            </value>
            <value>
                <fullName>Built Up</fullName>
            </value>
            <value>
                <fullName>Tile</fullName>
            </value>
            <value>
                <fullName>Shingle</fullName>
            </value>
            <value>
                <fullName>Standing Seam</fullName>
            </value>
            <value>
                <fullName>Material Delivery</fullName>
            </value>
            <value>
                <fullName>Shutdown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>